--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -11,7 +11,4 @@ contact_links:
     about: Please refer to our documentation repository for documentation issues
   - name: 🖼 Base-2018 / Skeleton Theme Issue
     url: https://github.com/bolt/themes/issues
-    about: Please refer to our themes repository for theme-realted issues
-  - name: 🔐 Security Issue
-    url: "mailto:security@bolt.cm"
-    about: ⚠️ Please do **not** disclose security-related issues publicly. If you have found a security issue in Bolt, please send the details to security@bolt.cm and don't disclose it publicly until we can provide a fix for it. If you wish, we'll credit you for finding verified issues, when we release the patched version.
+    about: Please refer to our themes repository for theme-realted issue
